Fix alignment issue in sub0org invited user list page

--- a/modules/theme/src/theme-core/definitions/apps/developer-portal.less
+++ b/modules/theme/src/theme-core/definitions/apps/developer-portal.less
@@ -1993,3 +1993,11 @@
         padding: 0;
     }
 }
+
+/*-------------------
+    Users List
+---------------------*/
+
+.sub-org-users-list {
+    margin-top: 40px;
+}
